created the outline of the planner

--- a/style.css
+++ b/style.css
@@ -4,3 +4,8 @@
     color:mediumaquamarine;
     font-style: bold;
 }
+#date_time{
+    text-align: center;
+    color: black;
+    font-style: bold;
+}
